--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -15,3 +15,30 @@
     margin-left: 600px;
     height: 250px
 }
+
+.profile__buttons {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: orange;
+}
+
+.profile__button {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.profile__manage {
+    display: flex;
+    justify-content: center;
+}
+
+.profile__div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 2px dotted;
+    margin: 50px 500px;
+    background: linear-gradient(rgb(247, 118, 118), rgb(187, 187, 51), rgb(247, 118, 118) );
+}
