--- a/src/components/views/views.css
+++ b/src/components/views/views.css
@@ -1,3 +1,7 @@
+.title {
+    background: linear-gradient(rgb(247, 118, 118), rgb(187, 187, 51), rgb(247, 118, 118) );
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -7,4 +11,5 @@
 .subheader {
     display: flex;
     justify-content: center;
+    margin-top: 5px;
 }
