--- a/src/components/reviews/ReviewList.css
+++ b/src/components/reviews/ReviewList.css
@@ -5,6 +5,7 @@
   margin-top: 50px;
   border: 2px solid;
   width: 500px;
+  background-color: red;
 }
 
 .review__name {
@@ -31,6 +32,7 @@
     border: 1px solid;
     margin-top: 20px;
     margin-bottom: 10px;
+    background-color: white;
 }
 
 .review__date {
@@ -44,6 +46,7 @@
     display: flex;
     justify-content: center;
     border: 1px solid;
+    background-color: white;
 }
 
 .review__response__header {
