--- a/src/components/stores/StorePage.css
+++ b/src/components/stores/StorePage.css
@@ -60,3 +60,21 @@
     margin-right: auto;
     margin-top: 20px;
 }
+
+.store_edit_button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.store_edit_button_container {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid;
+    margin-top: 20px;
+    width: 200px;
+    background-color: red;
+}
