--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /*background: linear-gradient(rgb(247, 118, 118), rgb(187, 187, 51), rgb(247, 118, 118) )*/
+  /*background: linear-gradient(rgba(96, 81, 81, 0.123), rgba(226, 14, 14, 0.282) )*/
+  background-color: rgba(101, 93, 93, 0.533);
 }
 
 code {
