--- a/src/components/reviews/ReviewList.css
+++ b/src/components/reviews/ReviewList.css
@@ -5,25 +5,25 @@
   margin-top: 50px;
   border: 2px solid;
   width: 500px;
-  background-color: red;
+  background-color: rgb(235, 157, 157);
 }
 
 .review__name {
     display: flex;
     justify-content: center;
-    background-color: red;
+    background-color: rgb(235, 157, 157);
 }
 
 .review__vehicle {
     display: flex;
     justify-content: center;
-    background-color: red;
+    background-color: rgb(235, 157, 157);
 }
 
 .review__rating {
     display: flex;
     justify-content: center;
-    background-color: red;
+    background-color: rgb(235, 157, 157);
 }
 
 .review__text {
@@ -39,7 +39,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
-    background-color: red;
+    background-color: rgb(235, 157, 157);
 }
 
 .review__response {
@@ -54,8 +54,22 @@
     justify-content: center;
 }
 
-.review__buttons {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+
+.review_edit_button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
+.review__delete {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.review_button_respond {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
